# leaguepedia-loader

./: .gitignore  Dockerfile  Pipfile  README.md  data_loading.py  load_everything.py  pyproject.toml  run_once.py
.github/workflows/: pr-check.yml
models/: league.py  match.py  player.py  tournament.py
src/: data_loading.py  load_everything.py  run_once.py
src/leaguepedia/: leaguepedia.py
src/models/: __init__.py  league.py  match.py  player.py  team.py  tournament.py
src/util/: datetime.py  team_info.py
util/: datetime.py  team_info.py
