[project]
name = "leaguepedia-loader"
version = "0.0.1"
requires-python = "~=3.13.0"
dependencies = [
    "mwrogue~=0.1.5",
    "rich~=14.3.1",
    "boto3~=1.40.51",
    "boto3-stubs~=1.42.25",
    "botocore~=1.40.51",
    "pyinstaller~=6.17.0"
]

[dependency-groups]
dev = []

[tool.uv]
package = true

[project.scripts]
load-everything = "load_everything:main"


[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
